--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "ChromTris Tetris",
   "version": "0.1.0",
+  "options_page": "options.html",
   "browser_action": {
     "default_icon": "images/logo-48.png",
     "default_title": "ChromTris",
