--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,8 @@
     "default_popup": "popup.html"
   },
   "icons": {
-    "48": "images/logo-48.png"
+    "16": "images/logo-16.png",
+    "48": "images/logo-48.png",
+    "128": "images/logo-128.png"
   }
 } 
